<resources>
    <string name="app_name">easyfood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="favourite_meals">Favourite meals</string>
    <string name="categories_fragment">Categories fragment</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="categories">Categories</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="popular_items">Popular Items</string>
    <string name="favourite_meal">Favourite meal</string>
    <string name="category">Category: </string>
    <string name="area">Area: </string>
    <string name="instructions">Instructions :</string>
    <string name="random_meal_name">Random meal name</string>
    <string name="category_name">Category name</string>
    <string name="category_description">Category Description</string>
    <string name="meal_name">Meal name</string>
    <string name="read_more">Read more...</string>
</resources>