<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.bottomSheet.MealBottomSheetFragment">

    <ImageView
        android:id="@+id/img_bottom_sheet"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_5sdp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_sheet_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_bottom_sheet"
        app:layout_constraintTop_toTopOf="@id/img_bottom_sheet">

        <TextView
            android:id="@+id/tv_area_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/area"
            android:textColor="@color/g_black"
            app:drawableStartCompat="@drawable/ic_area"
            app:drawableTint="@color/g_black" />

        <TextView
            android:id="@+id/tv_category_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:text="@string/category_name"
            android:textColor="@color/g_black"
            app:drawableStartCompat="@drawable/ic_category"
            app:drawableTint="@color/g_black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/myfont"
        android:text="@string/meal_name"
        android:textColor="@color/g_black"
        app:drawableTint="@color/g_black"
        app:layout_constraintStart_toStartOf="@id/bottom_sheet_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_linear_layout" />

    <TextView
        android:id="@+id/tv_read_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/myfont"
        android:text="@string/read_more"
        android:textColor="@color/g_black"
        app:drawableTint="@color/g_black"
        app:layout_constraintStart_toStartOf="@id/tv_meal_name"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_name" />
</androidx.constraintlayout.widget.ConstraintLayout>